mt4-trading-api/k8s-cluster/apps/demo/mt4-trading-api-web-demo-deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mt4-trading-api-web-demo
  namespace: mt4-trading-api-demo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mt4-trading-api-web-demo
        env: mt4-trading-api-demo
    spec:
      containers:
      - name: mt4-trading-api-web-demo
        image: '559845540357.dkr.ecr.eu-west-2.amazonaws.com/mt4-api/test:mt4-trading-api-server-staging15'
        resources:
          limits:
            cpu: 300m
            memory: 800Mi
          requests:
            cpu: 200m
            memory: 500Mi
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: envfile
          mountPath: "/opt/application/.env"
          subPath: mt4-trading-api-web-demo.properties
      volumes:
      - name: envfile
        configMap:
          name: mt4-trading-api-web-demo
