mt4-trading-api/k8s-cluster/apps/demo/mt4-trading-api-web-demo-kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mt4-trading-api-web-demo
  namespace: mt4-trading-api-demo
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: mt4-trading-api-web-demo
