mt4-trading-api/k8s-cluster/apps/demo/mt4-trading-api-web-demo-ingress.yaml
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
  name: mt4-trading-api-web-demo
  namespace: mt4-trading-api-demo
  annotations:
        nginx.ingress.kubernetes.io/affinity: "cookie"
        nginx.ingress.kubernetes.io/session-cookie-name: "INGRESSCOOKIE"
        nginx.org/websocket-services: "mt4-trading-api-web-demo"

spec:  
  rules:
  - host: mt4-api-demo.bdswiss.com
    http:
      paths:
      - backend:
          serviceName: mt4-trading-api-web-demo
          servicePort: 80
        path: /
